--- a/world.html
+++ b/world.html
@@ -132,7 +132,7 @@ header {
                 <a href="contact.html"><li>Contact Us</li></a>
                 <a href="newsflash.html"><li>NewsFlash</li></a>
                 <a href="helpinghand.html"><li>Helping Hands</li></a>
-                <a href="abouut_us.html"><li>Wanna Find Us</li></a>
+                <a href="about_us.html"><li>Wanna Find Us</li></a>
                 <a href="faq.html"><li>FAQ's</li></a>
                 <a href="feedback.html"><li>Your View</li></a>
             </ul>
